--- a/README.mkd
+++ b/README.mkd
@@ -11,16 +11,7 @@ PowerGrASP results, compared to the existing BIOTEC tool, can be found in the [r
 
     pip install powergrasp
 
-Just be sure that, in the library installation directory, for [pyasp](https://github.com/sthiele/pyasp),
-you have the binaries *gringo4* and *clasp* installed.
-In case of a system-wide installation, these binaries are generally correctly installed and can be found in */usr/lib/python3.5/site-packages/pyasp/bin/*.
-The binaries, if not properly installed by pip, can be found on the sourceforge website:
-- [gringo4](http://sourceforge.net/projects/potassco/files/gringo/4.5.3/), in version 4.5.3, that probably needs to be renamed from *gringo* to *gringo4*.
-- [clasp](http://sourceforge.net/projects/potassco/files/clasp/3.1.3/), in version 3.1.3.
-
-A magical workaround is to use the *--no-cache-dir* option of pip for to the binaries properly installed, even in local or with a virtualenv:
-
-    pip install powergrasp --no-cache-dir
+Just be sure that you have a clingo binary in your PATH.
 
 
 ## Basic use
